feat(lead): validate clouflare turnstile token support
