# api-pacs/docs/openapi.json
@@ -711,6 +711,34 @@
         }
       }
     },
+    "/lead/turnstile-token/validate": {
+      "post": {
+        "tags": ["lead"],
+        "summary": "Validate Turnstile Token",
+        "description": "Validate turnstile token.",
+        "requestBody": {
+          "description": "Validate turnstile token request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ValidateTurnstileTokenRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "2xx": {
+            "description": "Success"
+          },
+          "4xx": {
+            "description": "Client side errors"
+          },
+          "5xx": {
+            "description": "Server side errors"
+          }
+        }
+      }
+    },
     "/tenant": {
       "get": {
         "tags": ["tenant"],
@@ -1558,6 +1586,15 @@
           "outputMode": {
             "type": "string",
             "enum": ["JSON", "OHIF_ANNOTATIONS", "HTML", "WEB_APP", "PDF"]
+          }
+        }
+      },
+      "ValidateTurnstileTokenRequest": {
+        "required": ["token"],
+        "type": "object",
+        "properties": {
+          "token": {
+            "type": "string"
           }
         }
       },
