# api-pacs/module/lead/interfaces/http/rest/LeadCommandController.go
@@ -100,6 +100,98 @@ func (controller *LeadCommandController) Subscribe(w http.ResponseWriter, r *htt
 	response.JSON(w)
 }
 
+// ValidateTurnstileToken request handler to validate the turnstile token
+func (controller *LeadCommandController) ValidateTurnstileToken(w http.ResponseWriter, r *http.Request) {
+	var request types.ValidateTurnstileTokenRequest
+
+	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusBadRequest,
+			Success:   false,
+			Message:   "Invalid payload request.",
+			ErrorCode: apiError.InvalidRequestPayload,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	// validate request
+	err := types.Validate.Struct(request)
+	if err != nil {
+		errors := err.(validator.ValidationErrors)
+		if len(errors) > 0 {
+			response := viewmodels.HTTPResponseVM{
+				Status:    http.StatusBadRequest,
+				Success:   false,
+				Message:   types.ValidationErrors[errors[0].StructNamespace()],
+				ErrorCode: apiError.InvalidPayload,
+			}
+
+			response.JSON(w)
+			return
+		}
+
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusBadRequest,
+			Success:   false,
+			Message:   "Invalid payload request.",
+			ErrorCode: apiError.InvalidRequestPayload,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	success, err := controller.LeadCommandServiceInterface.ValidateTurnstileToken(context.TODO(), request.Token)
+	if err != nil {
+		var httpCode int
+		var errorMsg string
+
+		switch err.Error() {
+		case errors.UnauthorizedAccess:
+			httpCode = http.StatusUnauthorized
+			errorMsg = "Unauthorized access."
+		case errors.TurnstileAPIError:
+			httpCode = http.StatusInternalServerError
+			errorMsg = "Turnstile API error."
+		default:
+			httpCode = http.StatusUnauthorized
+			errorMsg = "Unauthorized access."
+		}
+
+		response := viewmodels.HTTPResponseVM{
+			Status:    httpCode,
+			Success:   false,
+			Message:   errorMsg,
+			ErrorCode: err.Error(),
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	if !success {
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusUnauthorized,
+			Success:   false,
+			Message:   "Unauthorized access.",
+			ErrorCode: apiError.UnauthorizedAccess,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	response := viewmodels.HTTPResponseVM{
+		Status:  http.StatusOK,
+		Success: success,
+		Message: "Successfully validated turnstile token.",
+	}
+
+	response.JSON(w)
+}
+
 // AddContactForm request handler to add contact form
 func (controller *LeadCommandController) AddContactForm(w http.ResponseWriter, r *http.Request) {
 	var request types.AddContactFormRequest
@@ -182,5 +274,4 @@ func (controller *LeadCommandController) AddContactForm(w http.ResponseWriter, r
 	}
 
 	response.JSON(w)
-
 }
